# ReaverCompiler

./: .clang-format  .editorconfig  .gitignore  .gitmodules  102-for_break.s  103-for_continue.s  CMakeLists.txt  Dockerfile  Makefile  README.md  arithmetic.s  assign.s  chliteral.s  declare_local.s  dependencies.txt  dereference.s  do_while.s  do_while_break_immediate.s  dot_product_1.s  dual_var.s  empty_blocks.s  escaped.s  exp_then_declaration.s  index.s  index_constant.s  index_variable.s  literal.s  modulo.c  modulo.s  parser.tab.c  puts.s  scoped_var.s  search.s  single_var.s  test.py  test.sh
.github/workflows/: ci-linux.yml  ci-macos.yml  common-build.yml  integration.yml
LLVM-tut/: lang.cc  tutorialnotes.md
compiler_tests/array/: index_variable_driver.c
compiler_tests/custom/: 001-float_increment.c  001-float_increment_driver.c  002-float_equals.c  002-float_equals_driver.c  003-float_not_equals.c  003-float_not_equals_driver.c  004-float_subtract.c  004-float_subtract_driver.c  005-float_divide.c  005-float_divide_driver.c  006-float_logical_or.c  006-float_logical_or_driver.c  007-float_logical_and.c  007-float_logical_and_driver.c  008-float_less_than.c  008-float_less_than_driver.c  009-float_less_than_equals.c  009-float_less_than_equals_driver.c  010-float_greater_than.c  010-float_greater_than_driver.c  011-float_greater_than_equals.c  011-float_greater_than_equals_driver.c  012-float_pre_increment.c  012-float_pre_increment_driver.c  013-float_post_increment.c  013-float_post_increment_driver.c  014-float_pre_decrement.c  014-float_pre_decrement_driver.c  015-float_post_decrement.c  020-ptr.c  021-ptr_ref.c  022-ptr_add.c  022-ptr_add_driver.c  023-ptr_add_char.c  023-ptr_add_char_driver.c  024-ptr_sub.c  024-ptr_sub_driver.c  025-addressof.c  025-addressof_driver.c  100-ternary.c  (+86 more)
compiler_tests/pointer/: assign_driver.c  index_driver.c
compiler_tests/strings/: chliteral_driver.c
docs/: c_compiler.md  feedback.md  info.md  kevin_log.md  test_list.md
docs/log/: kevin_log.md
include/: ast.hpp  cli.h  compiler.h
include/AST/: AST.hpp  Decl.hpp  Expr.hpp  Node.hpp  Printer.hpp  Stmt.hpp  Type.hpp  Visitor.hpp
include/CodeGen/: AArch64ABI.hpp  ABI.hpp  CodeGenModule.hpp  ScopeGuard.hpp  TypeChecker.hpp  X86_64ABI.hpp
include/ast/: ast.hpp  ast_binary_node.hpp  ast_context.hpp  ast_declarator.hpp  ast_empty_node.hpp  ast_expression.hpp  ast_init_declarator.hpp  ast_node.hpp  ast_type.hpp  ast_types.hpp  ast_utils.hpp
include/ast/array/: ast_array.hpp  ast_array_access.hpp  ast_array_declarator.hpp  ast_array_initializer_list.hpp
include/ast/conditionals/: ast_if_else.hpp  ast_ternary.hpp
include/ast/function/: ast_function_argument.hpp  ast_function_argument_list.hpp  ast_function_call.hpp  ast_function_declarator.hpp  ast_function_definition.hpp  ast_function_parameter.hpp  ast_function_parameter_list.hpp
include/ast/initializer/: ast_array_initializer.hpp  ast_simple_initializer.hpp  ast_struct_initalizer.hpp
include/ast/loops/: ast_do_while.hpp  ast_for.hpp  ast_while.hpp
include/ast/models/: ast_declaration.hpp  ast_expression.hpp  ast_models.hpp  ast_node.hpp  ast_node_list.hpp  ast_scope.hpp  ast_statement.hpp  ast_translation_unit.hpp  ast_type.hpp
include/ast/models/array/: ast_array_access.hpp  ast_array_declarator.hpp  ast_array_initializer_list.hpp
include/ast/models/declaration/: ast_declaration.hpp  ast_declaration_list.hpp  ast_declarator.hpp  ast_init_declarator.hpp  ast_init_declarator_list.hpp  ast_pointer_declarator.hpp  ast_translation_unit.hpp
include/ast/models/enum/: ast_enum.hpp  ast_enum_declaration.hpp  ast_enum_item.hpp  ast_enum_list.hpp
include/ast/models/function/: ast_function_call.hpp  (+5 more)
include/ast/operators/: ast_add.hpp  ast_bitwise_and.hpp  ast_bitwise_or.hpp  ast_bitwise_xor.hpp  ast_decrement.hpp  ast_divide.hpp  ast_equal.hpp  ast_greater_than.hpp  ast_increment.hpp  ast_less_than.hpp  ast_less_than_equal.hpp  ast_logical_and.hpp  ast_logical_or.hpp  ast_modulo.hpp  ast_multiply.hpp  ast_operator.hpp  ast_shift.hpp  ast_subtract.hpp  ast_unary_expression.hpp
include/ast/pointer/: ast_pointer.hpp  ast_pointer_access.hpp  ast_pointer_declarator.hpp
include/ast/primitives/: ast_char.hpp  ast_identifier.hpp  ast_number.hpp  ast_string.hpp  ast_variable.hpp
include/ast/scopes/: ast_scope_manager.hpp
include/ast/statements/: ast_break.hpp  ast_case.hpp  ast_continue.hpp  ast_return.hpp  ast_sizeof.hpp  ast_switch.hpp
include/ast/type/: ast_basic_type.hpp  ast_type.hpp
include/ast/utils/: ast_context.hpp  ast_utils.hpp
include/ast/variable/: ast_declaration.hpp  ast_variable_declaration.hpp  ast_variable_declarator.hpp
include/codegen/: codegen_ir.hpp
include/ir/: ir.hpp  ir_visitor.hpp
include/ir/models/: ir_basic_block.hpp  ir_declaration.hpp  ir_function.hpp  ir_ir.hpp  ir_local_declaration.hpp  ir_models.hpp  ir_statement.hpp  ir_terminator.hpp  ir_type.hpp
include/ty/: ty.hpp
kevs_compilers/: resources.md
kevs_compilers/flex-1/: count.l  desc.md
kevs_compilers/flex-bison-tutorial/: test.l  test.y
kevs_compilers/test-compiler/: lex.yy.c  lexer.l  parser.tab.c  parser.tab.h  parser.y
scripts/: doit.sh  rm.sh  test.py  test.sh
src/: Preprocessor.hpp  compiler.cpp  compiler.h  lexer.l  main.cpp  parser.y  resources.md
src/AST/: Decl.cpp  Expr.cpp  Printer.cpp  Type.cpp
src/CodeGen/: AArch64ABI.cpp  ABI.cpp  CodeGenModule.cpp  TypeChecker.cpp  X86_64ABI.cpp
src/ast/: ast_context.cpp
src/ast/models/: ast_declaration.cpp  ast_expression.cpp  ast_node_list.cpp  ast_scope.cpp  ast_statement.cpp  ast_translation_unit.cpp  ast_type.cpp
src/ast/operators/: ast_unary_expression.cpp
src/ast/utils/: ast_context.cpp  ast_utils.cpp
src/codegen/: codegen_ir.cpp
src/ir/models/: ir_basic_block.cpp  ir_declaration.cpp  ir_function.cpp  ir_ir.cpp  ir_local_declaration.cpp  ir_statement.cpp  ir_terminator.cpp  ir_type.cpp
src/ty/: ty.cpp
tools/BetterTesting/: README.md
tools/BetterTesting/src/: BetterTesting.py
unittests/CodeGen/: ABITest.cpp  X86_64ABITest.cpp
(+115 files in other folders)
